--- a/favarr/account.html
+++ b/favarr/account.html
@@ -133,7 +133,7 @@
         <div class="container-xxl h-100 px-0 pb-xxl-5 pb-lg-0 pb-5">
             <div class="row h-100">
                 <div
-                    class="col-lg-6 d-flex align-items-lg-start align-items-center flex-column justify-content-center hero--col order-lg-1 order-2 pb-lg-0 pb-2">
+                    class="col-6 d-flex align-items-lg-start align-items-center flex-column justify-content-center hero--col order-lg-1 order-2 pb-lg-0 pb-2">
                     <div class="hero__header text-white mb-sm-5 mb-4 mt-lg-0 mt-5">
                         <h1 class="hero__header__heading">Account</h1>
                         <h1 class="hero__header__heading">management</h1>
